# ROS2_For_Adeept_AWR

./: .gitignore  .gitmodules  readme.md  setup.sh  setup_robot.sh  setup_stationary_device.sh
doc/: .gitignore  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.tex
doc/other-files/: I2CCommunication.drawio  accelerometer.drawio  audio_transfer_diagram.drawio  battery_circuite.drawio  controller_nodes.drawio  dc_motor.drawio  distribuovanost.drawio  gyroscope.drawio  hardware_nodes.drawio  manual_control_diagram.drawio  motor_full_bridge.drawio  open_drain.drawio  precise_turning.drawio  pwm_duty_cycle.drawio  ros2_control_wh_plugin_transitions.drawio  ros2_system.drawio  ros_layers.drawio  servo.drawio  system_structure.drawio  ultrasonic.drawio  ultrasonic_blind_spot.drawio  wandering_diagram.drawio  wandering_obstacle_diagram.drawio  wandering_rqt.drawio  wandering_scan_diagram.drawio  ws2812_led.drawio  zadání.drawio
launch/: .gitignore  adeept_robot_launch.py  controllers_launch.py  gazebo_launch.py  gazebo_simulation_launch.py  launch.py  manual_control.py  manual_control_launch.py  navigation_launch.py  robot_state_publisher_launch.py  rviz_launch.py  second.py
launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/adeept_awr_diffdrive_control_plugin/: CMakeLists.txt  README.md  adeept_awr_diffdrive_control_plugin.xml  package.xml
src/adeept_awr_diffdrive_control_plugin/bringup/config/: controllers.yaml  controllers_sim.yaml
src/adeept_awr_diffdrive_control_plugin/bringup/launch/: diffbot.launch.py  diffdrive_launch.py  robot_state_publisher_launch.py
src/adeept_awr_diffdrive_control_plugin/hardware/: diffbot_system.cpp
src/adeept_awr_diffdrive_control_plugin/hardware/include/adeept_awr_diffdrive_control_plugin/: diffbot_system.hpp  pwm_generator.hpp  visibility_control.h
src/adeept_awr_input_sensors/: package.xml  setup.cfg  setup.py
src/adeept_awr_interfaces/: CMakeLists.txt  package.xml
src/adeept_awr_manual_controller/: package.xml  setup.cfg  (+1 more)
web/: style.css  webController.html
(+151 files in other folders)
